--- a/client/src/guest/components/citerne2d/style.css
+++ b/client/src/guest/components/citerne2d/style.css
@@ -2,9 +2,24 @@
 	margin-left: 2.5%;
 }
 canvas {
-	width: 95%;
+	width: 70%;
 	height: 95%;
+
 	background-color: #f5f5f5;
 	border: 1px solid #ccc;
 	border-radius: 4px;
+}
+
+.CardContainer {
+	width: 20%;
+	float: right;
+	margin-right: 7%;
+}
+.MyCard {
+	padding: 4%;
+	background-color: rgb(234, 229, 229);
+}
+.MyButton {
+	background-color: rgb(83, 110, 185);
+	height: 60px;
 }
