--- a/client/src/guest/components/citerne2d/style.css
+++ b/client/src/guest/components/citerne2d/style.css
@@ -17,9 +17,10 @@ canvas {
 }
 .MyCard {
 	padding: 4%;
-	background-color: rgb(234, 229, 229);
+	background-color: rgba(255, 255, 255, 0.928);
 }
 .MyButton {
 	background-color: rgb(83, 110, 185);
+	width: 100%;
 	height: 60px;
 }
