--- a/client/src/guest/components/citerne/CiternePage.css
+++ b/client/src/guest/components/citerne/CiternePage.css
@@ -1,4 +1,5 @@
 .page {
-  background-color: rgb(65, 86, 130);
-  height: 700px;
+	background-color: rgb(65, 86, 130);
+	height: 700px;
+	/*modif*/
 }
