--- a/client/src/admin/components/mapSelection/styles.css
+++ b/client/src/admin/components/mapSelection/styles.css
@@ -1,4 +1,16 @@
-.App {
-	font-family: sans-serif;
-	text-align: center;
+.MyMap {
+	width: 70%;
+	height: 95%;
+}
+.CardContainer {
+	width: 20%;
+}
+.MyCard {
+	padding: 4%;
+	background-color: rgba(255, 255, 255, 0.928);
+}
+.MyButton {
+	background-color: rgb(83, 110, 185);
+	width: 100%;
+	height: 60px;
 }
