--- a/client/src/guest/components/mapSelection/styles.css
+++ b/client/src/guest/components/mapSelection/styles.css
@@ -3,10 +3,9 @@
 	height: 95%;
 }
 .CardContainer {
-	width: 20%;
-	float: right;
-	margin-right: 7%;
-	margin-bottom: 20%;
+	width: 30%;
+	margin-right: 35%;
+	margin-bottom: 200px;
 }
 .MyCard {
 	padding: 4%;
