--- a/client/src/guest/components/mapSelection/styles.css
+++ b/client/src/guest/components/mapSelection/styles.css
@@ -7,6 +7,13 @@
 	margin-right: 35%;
 	margin-top: 2%;
 }
+
+.CardContainerEtape3 {
+	width: 30%;
+	margin-left: 35%;
+	margin-top: 40%;
+}
+
 .MyCard {
 	padding: 4%;
 	background-color: rgba(255, 255, 255, 0.928);
