--- a/client/src/guest/components/citerne2d/Citerne2d.css
+++ b/client/src/guest/components/citerne2d/Citerne2d.css
@@ -10,16 +10,16 @@ canvas {
 	border-radius: 4px;
 }
 
-.CardContainer {
+.CardContainer2d {
 	width: 20%;
 	float: right;
 	margin-right: 7%;
 }
-.MyCard {
+.MyCard2d {
 	padding: 4%;
 	background-color: rgba(255, 255, 255, 0.928);
 }
-.MyButton {
+.MyButton2d {
 	background-color: rgb(83, 110, 185);
 	width: 100%;
 	height: 60px;
