--- a/client/src/guest/components/citerne2d/Citerne2d.css
+++ b/client/src/guest/components/citerne2d/Citerne2d.css
@@ -1,10 +1,9 @@
 .App {
 	margin-left: 2.5%;
 }
-canvas {
+.MyCanvas {
 	width: 70%;
 	height: 95%;
-
 	background-color: #f5f5f5;
 	border: 1px solid #ccc;
 	border-radius: 4px;
