--- a/client/src/guest/components/2d/citerne2d/Citerne2d.css
+++ b/client/src/guest/components/2d/citerne2d/Citerne2d.css
@@ -5,7 +5,7 @@
 	width: 70%;
 	height: 95%;
 	background-color: #f5f5f5;
-	border: 1px solid #ccc;
+	border: 1px solid rgb(24, 99, 197);
 	border-radius: 4px;
 }
 
@@ -22,4 +22,10 @@
 	background-color: rgb(83, 110, 185);
 	width: 100%;
 	height: 60px;
+}
+.LoadingBody {
+	margin-top: 20%;
+}
+.LoadingHeader {
+	width: 70%;
 }
