--- a/client/src/guest/components/mapSelection/styles.css
+++ b/client/src/guest/components/mapSelection/styles.css
@@ -28,6 +28,8 @@
 	background-color: rgb(83, 110, 185);
 	width: 20%;
 	margin-left: 40%;
+	/* width: 40%;
+	height: 60px; */
 }
 .Footer {
 	background-color: rgb(185, 175, 83);
