--- a/client/src/guest/components/2d/citerne2d/Citerne2d.css
+++ b/client/src/guest/components/2d/citerne2d/Citerne2d.css
@@ -17,9 +17,11 @@
 .MyCard2d {
 	padding: 4%;
 	background-color: rgba(255, 255, 255, 0.928);
+	border-radius: 30px;
 }
 .MyButton2d {
 	background-color: rgb(83, 110, 185);
 	width: 100%;
 	height: 60px;
+	border-radius: 30px;
 }
