--- a/client/src/guest/components/3d/Page3d.css
+++ b/client/src/guest/components/3d/Page3d.css
@@ -4,7 +4,8 @@
 .my3D {
 	background-color: rgb(65, 86, 130);
 	height: 700px;
-	width: 70%;
+	width: 72%;
+	margin-right: 1%;
 	float: left;
 	/*modif*/
 }
