--- a/client/src/guest/components/todoList/App.css
+++ b/client/src/guest/components/todoList/App.css
@@ -40,18 +40,37 @@
 }
 .Container {
 	background-color: rgb(228, 232, 241);
-	padding: 1%;
+	padding-top: 3%;
+	padding-bottom: 3%;
+	padding-right: 15%;
+	padding-left: 15%;
 }
 .TasksList {
-	padding: 1%;
+	padding: 5%;
 	background-color: rgb(250, 250, 250);
 	border-radius: 4px;
 }
 .TaskItem {
 	/* background-color: red; */
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 .BtnDeleteTaskItem {
 	padding: '5px';
 	margin-left: '20px';
+}
+.MySpan {
+	background-color: rgb(41, 134, 233);
+	padding: 5px;
+	border-radius: 4px;
+	margin-left: 20px;
+}
+.MyCheckbox {
+	margin-right: 4px;
+	zoom: 1.55;
+}
+.Ajout {
+	border-radius: 7px;
+}
+.Validation {
+	background-color: rgb(81, 204, 106);
 }
