--- a/client/src/guest/components/tableauStat/tableauStat.css
+++ b/client/src/guest/components/tableauStat/tableauStat.css
@@ -63,6 +63,17 @@
        border-radius: 10px 10px 10px 10px;
        flex-basis: calc(20% -40px);
     }
+    .boxes2{
+        margin: 10px;
+        margin-top: 50px;
+        background-color: rgb(250, 57, 57);
+        overflow: hidden;
+        height: 200px;
+        max-height: 12vh;
+        box-shadow: 0px 12 px 18px -6px rgba(0,0,0,0.3);
+        border-radius: 10px 10px 10px 10px;
+        flex-basis: calc(20% -40px);
+    }
 
 
     .grids{
