--- a/client/src/guest/components/mapSelection/styles.css
+++ b/client/src/guest/components/mapSelection/styles.css
@@ -56,43 +56,43 @@ body,
 	font: 14px Arial, Helvetica, sans-serif;
 	background: white;
 	background: rgba(255, 255, 255, 0.8);
-	/*box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
-	/*border-radius: 5px;*/
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
 	line-height: 24px;
 	color: #555;
-	display: flex;
-	margin-right: 800px;
-	/* justify-content: center;
-  align-items: center; */
-	/* height: 100vh; */
-	width: 300px;
-}
-.legend h4 {
+	width: 400px;
+  }
+  .legend h4 {
 	text-align: center;
-	font-size: 16px;
+	font-size: 20px;
 	margin: 2px 12px 8px;
-	color: rgb(24, 166, 184);
-}
-
-.legend span {
+	color: rgb(15, 192, 228);
+  }
+  
+  .legend span {
 	position: relative;
 	bottom: 3px;
-}
-
-.legend i {
-	width: 18px;
-	height: 18px;
+	font-size: 15px;
+  }
+  
+  .legend i {
+	width: 20px;
+	height: 20px;
 	float: left;
 	margin: 0 8px 0 0;
 	opacity: 0.7;
-}
-
-.legend i.icon {
-	background-size: 18px;
+  }
+  
+  .legend i.icon {
+	background-size: 15px;
 	background-color: rgba(255, 255, 255, 1);
-}
-.legend button {
-	background-color: rgb(57, 85, 161);
-	width: 30%;
-	height: 60px;
-}
+  }
+  .legend i.icon2 {
+	background-size: 15px;
+	background-color: rgba(255, 255, 255, 1);
+  }
+  .legend i.icon3 {
+	background-size: 20px;
+	background-color: rgba(27, 183, 204, 0.799);
+  }
+
