--- a/client/src/guest/components/tableauStat/tableauStat.css
+++ b/client/src/guest/components/tableauStat/tableauStat.css
@@ -74,6 +74,17 @@
         border-radius: 10px 10px 10px 10px;
         flex-basis: calc(20% -40px);
     }
+    .boxes3{
+        margin: 10px;
+        margin-top: 50px;
+        background-color: rgba(241, 183, 10, 0.966);
+        overflow: hidden;
+        height: 200px;
+        max-height: 12vh;
+        box-shadow: 0px 12 px 18px -6px rgba(0,0,0,0.3);
+        border-radius: 10px 10px 10px 10px;
+        flex-basis: calc(20% -40px);
+    }
 
 
     .grids{
